@@ -1,9 +1,9 @@
-			       bmake v3
+			       bmake
 
 This directory contains a port of the BSD make tool (from NetBSD)
-I have run it on SunOS,Solaris,HP-UX 9 and IRIX.
+I have run it on SunOS,Solaris,HP-UX,AIX,IRIX,FreeBSD and Linux.
 
-Version 3 is has been re-worked from scratch to better facilitate
+Version 3 was re-worked from scratch to better facilitate
 importing newer make(1) versions from NetBSD.  The original code base
 was NetBSD-1.0, so version 3 was built by doing a fresh import of the
 NetBSD-1.0 usr.bin/make, adding the autoconf and other portability
@@ -11,100 +11,38 @@ patches to sync it with bmake v2, and then NetBSD's make
 of Feb 20, 2000 was imported and conflicts dealt with.
 NetBSD's make was again imported on June 6 and December 15, 2000.
 
-Note: when cvs importing newer versions 
-it is important to (in usr.bin/make):
+In 2003 bmake switched to a date based version (first was 20030714)
+which generally represents the date it was last merged with NetBSD's
+make.  Since then, NetBSD's make is imported within a week of any
+interesting changes, so that bmake tracks it very closely.
 
-mv config.h make-conf.h
-mv Makefile Makefile.in
+Building:
 
-before running cvs import.
+The prefered way to bootstrap bmake is:
 
-Building is simply a matter of:
+./bmake/boot-strap
 
-configure
-make -f makefile.boot
-make -f makefile.boot install
-make -f makefile.boot install-man
-make -f makefile.boot install-mk
+there are a number of args - most of which get passed to configure,
+eg.
 
-The install-mk target is only useful if you unpacked [bsd-]mk.tar.gz
-under the bmake directory.
+./bmake/boot-strap --prefix=/opt
 
-if you have GNU make or a make which supports VPATH, you can build it
-in a separate directory:
-
-here=`pwd`
-mkdir /tmp/bmake
-cd /tmp/bmake
-$here/configure
-gmake -f makefile.boot
-gmake -f makefile.boot install
-gmake -f makefile.boot install-man
-gmake -f makefile.boot install-mk
+see the boot-strap script for details.
 
 To make much use of bmake you will need the bsd.*.mk macros or my
 portable *.mk macros.  See 
-ftp://ftp.quick.com.au/pub/sjg/bsd-mk.tar.gz
-ftp://ftp.quick.com.au/pub/sjg/mk.tar.gz
+http://www.crufty.net/ftp/pub/sjg/bsd-mk.tar.gz
+http://www.crufty.net/ftp/pub/sjg/mk.tar.gz
+which will be links to the latest versions.
 
-If you have an earlier version of bmake installed you can use that
-with the generated Makefile.
+On a non-BSD system, you would want to unpack mk[-YYYYmmdd].tar.gz in
+the same directory as bmake (so ./mk and ./bmake exist), and
+./bmake/boot-strap will do the rest.
 
-Apart from new features such as .PARSEDIR picked up from the recent
-NetBSD make, this version has improvments (which are also in NetBSD's
-make or soon will be) to facilitate using MAKEOBJDIRPREFIX to support
-true read-only src trees.  See also ChangeLog.
+If you want to do it all by hand then read boot-strap first to get the
+idea.
 
-MAKEOBJDIRPREFIX:
-
-When MAKEOBJDIRPREFIX is set in the environment make(1) will attempt
-to chdir(${MAKEOBJDIRPREFIX}${.CUDRIR}) and use that as its objdir.
-Because the directory tree under ${MAKEOBJDIRPREFIX} is a mirror of
-the src tree, make ends up chdir'ing to objdirs that would not exist
-otherwise.  That is, when using normal ./obj dirs (or symlinks) only
-Makefiles which include obj.mk get a separate objdir.  When using
-MAKEOBJDIRPREFIX any directory which has subdirs that use obj.mk will
-have an objdir, thus Makefiles which were written expecting to process
-in ${.CURDIR} may break.  In particular, Makefiles which do:
-
-build:
-	${.MAKE} something
-	${.MAKE} else
-
-will break as the sub-make will not find a Makefile in
-${MAKEOBJDIRPREFIX}${.CUDRIR}.  Whereas
-
-build:
-	cd ${.CURDIR} && ${.MAKE} something
-	cd ${.CURDIR} && ${.MAKE} else
-	
-will work fine.  To avoid the need to re-work these Makefiles  we
-check for running ${.MAKE} or ${.MAKE:T} without a preceeding cd and
-effectively insert one.  This feature only operates if
-MAKEOBJDIRPREFIX (or MAKEOBJDIR) is set and can be dissabled by
-defining NOCHECKMAKECHDIR.
-
-Another problem arrises from make(1) overriding the physical location
-returned by getcwd() with the logical one from $PWD.  We dissable this
-feature if MAKEOBJDIRPREFIX is set to avoid the situation where
-make(1) behaves differently depending on how it got to a directory.
-This avoids lossage like the following example.
-
-If /usr/local/src is a symlink to /d3/src:
-
-cd /usr/local/src/project
-MAKEOBJDIRPREFIX=/tmp/obj make obj
-===> sub1
-/d3/src/project/sub1 -> /tmp/obj/d3/src/project/sub1
-...
-
-cd /usr/local/src/project/sub1
-MAKEOBJDIRPREFIX=/tmp/obj make obj
-/usr/local/src/project/sub1 -> /tmp/obj/usr/local/src/project/sub1
-
-the expected objdir changes depending on circumstances - which 
-means that 9 times out of 10 you'll end up trying to polute
-curdir because the objdir you expected does not exist.
-
+Even if you have an earlier version of bmake installed, use boot-strap
+to ensure that all goes well.
 
 --sjg
