@@ -1,4 +1,4 @@
-/*	$NetBSD: job.c,v 1.89 2005/02/16 15:11:52 christos Exp $	*/
+/*	$NetBSD: job.c,v 1.92 2005/05/08 04:19:12 christos Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990 The Regents of the University of California.
@@ -70,14 +70,14 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: job.c,v 1.89 2005/02/16 15:11:52 christos Exp $";
+static char rcsid[] = "$NetBSD: job.c,v 1.92 2005/05/08 04:19:12 christos Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
 #if 0
 static char sccsid[] = "@(#)job.c	8.2 (Berkeley) 3/19/94";
 #else
-__RCSID("$NetBSD: job.c,v 1.89 2005/02/16 15:11:52 christos Exp $");
+__RCSID("$NetBSD: job.c,v 1.92 2005/05/08 04:19:12 christos Exp $");
 #endif
 #endif /* not lint */
 #endif
@@ -963,7 +963,6 @@ JobClose(Job *job)
  *	None
  *
  * Side Effects:
- *	Some nodes may be put on the toBeMade queue.
  *	Final commands for the job are placed on postCommands.
  *
  *	If we got an error and are aborting (aborting == ABORT_ERROR) and
@@ -1368,7 +1367,7 @@ Job_CheckCommands(GNode *gn, void (*abortProc)(const char *, ...))
 	    Var_Set(IMPSRC, Var_Value(TARGET, gn, &p1), gn, 0);
 	    if (p1)
 		free(p1);
-	} else if (Dir_MTime(gn) == 0) {
+	} else if (Dir_MTime(gn) == 0 && (gn->type & OP_SPECIAL) == 0) {
 	    /*
 	     * The node wasn't the target of an operator we have no .DEFAULT
 	     * rule to go on and the target doesn't already exist. There's
@@ -1944,6 +1943,8 @@ JobStart(GNode *gn, int flags, Job *previous)
 	}
 	flags |= JOB_FIRST;
     }
+    if (gn->type & OP_SPECIAL)
+	flags |= JOB_SPECIAL;
 
     job->node = gn;
     job->tailCmds = NILLNODE;
@@ -2468,6 +2469,35 @@ end_loop:
     }
 }
 
+static void
+JobRun(GNode *targ)
+{
+#ifdef notyet
+    /*
+     * Unfortunately it is too complicated to run .BEGIN, .END,
+     * and .INTERRUPT job in the parallel job module. This has
+     * the nice side effect that it avoids a lot of other problems.
+     */
+    Lst lst = Lst_Init(FALSE);
+    Lst_AtEnd(lst, targ);
+    (void)Make_Run(lst);
+    Lst_Destroy(lst, NOFREE);
+    JobStart(targ, JOB_SPECIAL, (Job *)0);
+    while (nJobs) {
+	Job_CatchOutput();
+#ifndef RMT_WILL_WATCH
+	Job_CatchChildren(!usePipes);
+#endif /* RMT_WILL_WATCH */
+    }
+#else
+    Compat_Make(targ, targ);
+    if (targ->made == ERROR) {
+	PrintOnError("\n\nStop.");
+	exit(1);
+    }
+#endif
+}
+
 /*-
  *-----------------------------------------------------------------------
  * Job_CatchChildren --
@@ -2773,12 +2803,10 @@ Job_Init(int maxproc, int maxlocal)
     begin = Targ_FindNode(".BEGIN", TARG_NOCREATE);
 
     if (begin != NILGNODE) {
-	JobStart(begin, JOB_SPECIAL, (Job *)0);
-	while (nJobs) {
-	    Job_CatchOutput();
-#ifndef RMT_WILL_WATCH
-	    Job_CatchChildren(!usePipes);
-#endif /* RMT_WILL_WATCH */
+	JobRun(begin);
+	if (begin->made == ERROR) {
+	    PrintOnError("\n\nStop.");
+	    exit(1);
 	}
     }
     postCommands = Targ_FindNode(".END", TARG_CREATE);
@@ -3196,14 +3224,7 @@ JobInterrupt(int runINTERRUPT, int signo)
 	interrupt = Targ_FindNode(".INTERRUPT", TARG_NOCREATE);
 	if (interrupt != NILGNODE) {
 	    ignoreErrors = FALSE;
-
-	    JobStart(interrupt, JOB_IGNDOTS, (Job *)0);
-	    while (nJobs) {
-		Job_CatchOutput();
-#ifndef RMT_WILL_WATCH
-		Job_CatchChildren(!usePipes);
-#endif /* RMT_WILL_WATCH */
-	    }
+	    JobRun(interrupt);
 	}
     }
     Trace_Log(MAKEINTR, 0);
@@ -3230,14 +3251,7 @@ Job_Finish(void)
 	if (errors) {
 	    Error("Errors reported so .END ignored");
 	} else {
-	    JobStart(postCommands, JOB_SPECIAL | JOB_IGNDOTS, NULL);
-
-	    while (nJobs) {
-		Job_CatchOutput();
-#ifndef RMT_WILL_WATCH
-		Job_CatchChildren(!usePipes);
-#endif /* RMT_WILL_WATCH */
-	    }
+	    JobRun(postCommands);
 	}
     }
     Job_TokenFlush();
