@@ -1,4 +1,4 @@
-.\"	$NetBSD: make.1,v 1.105 2005/02/23 17:22:29 sjg Exp $
+.\"	$NetBSD: make.1,v 1.107 2005/05/08 00:38:47 christos Exp $
 .\"
 .\" Copyright (c) 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -29,7 +29,7 @@
 .\"
 .\"	from: @(#)make.1	8.4 (Berkeley) 3/19/94
 .\"
-.Dd May 6, 2004
+.Dd May 7, 2005
 .Dt MAKE 1
 .Os
 .Sh NAME
