@@ -1,4 +1,4 @@
-/*	$NetBSD: parse.c,v 1.97 2005/02/16 15:11:52 christos Exp $	*/
+/*	$NetBSD: parse.c,v 1.99 2005/05/08 00:38:48 christos Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
@@ -69,14 +69,14 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: parse.c,v 1.97 2005/02/16 15:11:52 christos Exp $";
+static char rcsid[] = "$NetBSD: parse.c,v 1.99 2005/05/08 00:38:48 christos Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
 #if 0
 static char sccsid[] = "@(#)parse.c	8.3 (Berkeley) 3/19/94";
 #else
-__RCSID("$NetBSD: parse.c,v 1.97 2005/02/16 15:11:52 christos Exp $");
+__RCSID("$NetBSD: parse.c,v 1.99 2005/05/08 00:38:48 christos Exp $");
 #endif
 #endif /* not lint */
 #endif
@@ -937,7 +937,7 @@ static void
 ParseDoDependency(char *line)
 {
     char  	   *cp;		/* our current position */
-    GNode 	   *gn;		/* a general purpose temporary node */
+    GNode 	   *gn = NULL;	/* a general purpose temporary node */
     int             op;		/* the operator on the line */
     char            savec;	/* a place to save a character */
     Lst    	    paths;   	/* List of search paths to alter when parsing
@@ -1089,7 +1089,7 @@ ParseDoDependency(char *line)
 		    case End:
 		    case Interrupt:
 			gn = Targ_FindNode(line, TARG_CREATE);
-			gn->type |= OP_NOTMAIN;
+			gn->type |= OP_NOTMAIN|OP_SPECIAL;
 			(void)Lst_AtEnd(targets, (ClientData)gn);
 			break;
 		    case Default:
